--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -7,16 +7,15 @@ package:
   version: {{ version|replace("-", "_") }}
 
 source:
-  fn: hypergeo_{{ version }}.tar.gz
   url:
     - {{ cran_mirror }}/src/contrib/hypergeo_{{ version }}.tar.gz
     - {{ cran_mirror }}/src/contrib/Archive/hypergeo/hypergeo_{{ version }}.tar.gz
   sha256: 6d5b78353aad1d13091ccbeb340867dad7b9eb00d0e2185286dc7e13848f4d8e
 
 build:
-  noarch: generic
   merge_build_host: True  # [win]
   number: 1002
+  noarch: generic
   rpaths:
     - lib/R/lib/
     - lib/
@@ -42,10 +41,11 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=hypergeo
-  license: GPL-2
+  license: GPL-2.0-only
   summary: The Gaussian hypergeometric function for complex numbers.
   license_family: GPL2
-  license_file: '{{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2'
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-2
 
 extra:
   recipe-maintainers:
